Add custom-jmod demo: pack extra content into a jmod, link via jlink
JMod now routes a predecessor's config/, libs/ and cmds/ folders to jmod's
--config/--libs/--cmds (alongside classes/ to --class-path), so a custom step can
pack non-class content into a module's .jmod. The new custom-jmod demo wraps the
stock assembler to add a config/ directory, pack it into the module's .jmod, and
jlink that into a runtime image where jlink lays the config into conf/ - content
a jar cannot carry into a runtime. The JMod->jlink config round-trip is covered
by a unit test, and the demo is exercised in CI.