@@ -49,6 +49,40 @@ public class JModTest {
         assertThat(next.resolve(JMod.JMODS + "sample.jmod")).isNotEmptyFile();
     }
 
+    @Test
+    public void config_directory_is_packaged_and_reaches_a_jlinked_runtime() throws IOException {
+        Path sources = Files.createDirectory(root.resolve("sources"));
+        Files.writeString(sources.resolve("module-info.java"), "module sample { }\n");
+        Files.writeString(Files.createDirectory(sources.resolve("sample")).resolve("Sample.java"),
+                "package sample; public class Sample { }\n");
+        Path classes = Files.createDirectory(bundle.resolve(BuildStep.CLASSES));
+        int code = ToolProvider.findFirst("javac").orElseThrow().run(System.out, System.err,
+                "-d", classes.toString(),
+                sources.resolve("module-info.java").toString(),
+                sources.resolve("sample/Sample.java").toString());
+        assertThat(code).isZero();
+        Files.writeString(Files.createDirectory(bundle.resolve(JMod.CONFIG)).resolve("app.properties"), "greeting=configured");
+
+        BuildStepResult result = JMod.tool().apply(
+                Runnable::run,
+                new BuildStepContext(previous, next, supplement),
+                new LinkedHashMap<>(Map.of("classes", new BuildStepArgument(
+                        bundle,
+                        Map.of(Path.of("classes/module-info.class"), ChecksumStatus.ADDED,
+                                Path.of("config/app.properties"), ChecksumStatus.ADDED))))).toCompletableFuture().join();
+        assertThat(result.next()).isTrue();
+        Path jmod = next.resolve(JMod.JMODS + "sample.jmod");
+        assertThat(jmod).isNotEmptyFile();
+
+        Path runtime = root.resolve("runtime");
+        int linked = ToolProvider.findFirst("jlink").orElseThrow().run(System.out, System.err,
+                "--module-path", jmod.toString(),
+                "--add-modules", "sample",
+                "--output", runtime.toString());
+        assertThat(linked).isZero();
+        assertThat(runtime.resolve("conf/app.properties")).hasContent("greeting=configured");
+    }
+
     @ParameterizedTest
     @ValueSource(booleans = {true, false})
     public void skips_when_no_module_is_present(boolean process) throws IOException {
